Components and css foldered

--- a/Home.html
+++ b/Home.html
@@ -49,7 +49,7 @@
             </p>
             <div id=iframe>
                 <p align="center">
-                <iframe id="embedded"  width="900" height="1000" src="Embeded.html" alt="A box showing different pages"></iframe>
+                <iframe id="embedded"  width="900" height="1000" src="components/Embeded.html" alt="A box showing different pages"></iframe>
                 </p>
             </div><br><br>
 
@@ -59,7 +59,7 @@
                     <a href="https://www.linkedin.com/in/gopala-krishna-d/" target="_blank" placeholder="LINKEDIN=@gopala-krishna-d">
                         <img id="contact" src="images/linkedin.png">
                     </a>&nbsp;&nbsp; <br><br>
-                    <a href="https://instagram.com/iam._.gk?utm_source=qr&igshid=ZDc4ODBmNjlmNQ%3D%3D" target="_blank" placeholder="LINKEDIN=@gopala-krishna-d">
+                    <a href="https://instagram.com/iam._.gk?utm_source=qr&igshid=ZDc4ODBmNjlmNQ%3D%3D" target="_blank" placeholder="INSTAGRAM=@iam._.gk">
                         <img id="contact" src="images/insta.png">
                     </a>&nbsp;&nbsp; <br><br>
                     <a href="https://twitter.com/g0pa1kr1shna" target="_blank" placeholder="TWITTER=@g0palakr1shna">
