Home renamed as index

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="home">
             <nav>
                 <p align="left">
-                    <a id="refresh" href="Home.html">Gopala Krishna D</a>
+                    <a id="refresh" href="index.html">Gopala Krishna D</a>
                     <span class="right">
                     <a id="navbar" href="#home">Home</a>
                     <a id="navbar" href="#about">About</a>
